# Proyecto_No3_GC

./: CMakeLists.txt  README.md
src/: ObjLoader.cpp  ObjLoader.h  camera.h  color.cpp  color.h  cube.cpp  cube.h  fragment.h  framebuffer.h  intersect.h  light.h  line.h  main.cpp  material.h  object.h  print.h  shaders.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  triangle.h
